# rust-actix-example

./: .env-example  .gitignore  Cargo.toml  docker-compose.yaml  justfile
perfect_movie_game_backend/: Cargo.toml
perfect_movie_game_backend/src/: main.rs
perfect_movie_game_backend/src/config/: mod.rs
perfect_movie_game_frontend/: Cargo.toml
src/: main.rs
src/config/: mod.rs
src/handlers/: mod.rs
src/repositories/: mod.rs
