[package]
name = "perfect_movie_game"
version = "0.1.0"
authors = ["mitchgollub <mgollub@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
config = "0.11.0"
dotenv = "0.15.0"
serde = { version = "1", features = ["derive"]}
eyre = "0.6.5"
color-eyre = "0.5.11"
tracing = "0.1"
tracing-futures = "0.2.5"
tracing-log = { version = "0.1.2", features =["env_logger"] }
tracing-subscriber = "0.2.18"
reqwest = { version = "0.11.3", features = ["json"] }
tokio = { version = "1", features = ["full"] }

